Icons/program icons
Fixes for all OS (win/linux/mac)

--- a/ssMon.qrc
+++ b/ssMon.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/new/prefix1">
         <file>resources/reload.png</file>
         <file>resources/sun.png</file>
+        <file>resources/Sun-icon.png</file>
     </qresource>
 </RCC>
